syntax = "proto3";

package protos;
option go_package = "orch-go/gen/protos;protos";
option csharp_namespace = "Core";



import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "customer.proto";
import "custom_types.proto";

service LoginLogService {
  rpc GetAll (GetAllRequest) returns (GetAllLoginLogsResponse);
  rpc GetById (GetLoginLogByIdRequest) returns (LoginLogModel);
  rpc GetByIds (GetLoginLogByIdsRequest) returns (GetAllLoginLogsResponse);
  rpc GetByCustomer (GetLoginLogsByCustomerRequest) returns (GetAllLoginLogsResponse);
  rpc GetInTimeRange (GetLoginLogsInTimeRangeRequest) returns (GetAllLoginLogsResponse);
  rpc Add (AddLoginLogRequest) returns (LoginLogModel);
  rpc Update (UpdateLoginLogRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteLoginLogRequest) returns (google.protobuf.Empty);
  rpc AddBulk (AddLoginLogBulkRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateLoginLogBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteLoginLogBulkRequest) returns (google.protobuf.Empty);
}

message LoginLogModel {
  int32 log_id = 1;
  optional int32 customer_id = 2;
  optional google.protobuf.Timestamp login_time = 3;
  optional string ip_address = 4;
  optional string device_info = 5;
}

message GetAllLoginLogsResponse {
  repeated LoginLogModel login_logs = 1;
}

message GetLoginLogByIdRequest {
  int32 log_id = 1;
}

message GetLoginLogByIdsRequest {
  repeated int32 log_ids = 1;
}

message GetLoginLogsByCustomerRequest {
  int32 customer_id = 1;
}

message GetLoginLogsInTimeRangeRequest {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
}

message AddLoginLogRequest {
  optional int32 customer_id = 1;
  optional google.protobuf.Timestamp login_time = 2;
  optional string ip_address = 3;
  optional string device_info = 4;
}

message AddLoginLogBulkRequest {
  repeated AddLoginLogRequest login_logs = 1;
}

message UpdateLoginLogRequest {
  int32 log_id = 1;
  optional int32 customer_id = 2;
  optional google.protobuf.Timestamp login_time = 3;
  optional string ip_address = 4;
  optional string device_info = 5;
}

message UpdateLoginLogBulkRequest {
  repeated UpdateLoginLogRequest login_logs = 1;
}

message DeleteLoginLogRequest {
  int32 log_id = 1;
}

message DeleteLoginLogBulkRequest {
  repeated DeleteLoginLogRequest login_logs = 1;
}

